--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="https://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
+title:               Muslim Expats Eindhoven
+tagline:             'Meetup'
+description:         'Sponsored by <a href="https://sasalaam.nl" target="_blank">SA Salaam</a>.'
 url:                 https://meem040.github.io
 baseurl:             ''
 paginate:            5
