--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Setup
-title:               Muslim Expats Eindhoven
-tagline:             'Meetup'
+title:               Muslim Expats Eindhoven Meetup
+tagline:             ''
 description:         'Sponsored by <a href="https://sasalaam.nl" target="_blank">SA Salaam</a>.'
 url:                 https://meem040.github.io
 baseurl:             ''
