--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Setup
 title:               Muslim Expats Eindhoven Meetup
 tagline:             ''
-description:         'A <a href="https://sasalaam.nl" target="_blank">SA Salaam</a> project.'
+description:         ''
 url:                 https://meem040.github.io
 baseurl:             ''
 paginate:            5
